[project]
name = "autonomath-mcp"
version = "0.4.1"
description = "REST + MCP context-compression layer for Japanese institutional public data. jpcite turns long PDFs, official pages, and search results into compact Evidence Packets with source URLs, fetched timestamps, known gaps, and compatibility/exclusion rules before downstream AI agents draft answers. 3 yen/billable unit metered (3.30 tax-incl), anonymous 3/day per IP free."
license = { text = "MIT" }
authors = [
    { name = "Bookyou株式会社", email = "info@bookyou.net" },
]
readme = "README.md"
keywords = [
    "mcp",
    "mcp-server",
    "anthropic",
    "japan",
    "japanese",
    "subsidy",
    "tax",
    "loan",
    "invoice",
    "regulation",
    "compliance",
    "law",
    "government",
    "legal-tech",
    "evidence",
    "citation",
    "rag",
    "agent-tools",
    "claude",
    "gpt",
    "cursor",
    "gemini",
    "補助金",
    "税制",
    "法令",
    "適格請求書",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.11"
dependencies = [
    # Upper bounds on security-critical libs prevent surprise breakage from a
    # silent Dependabot major-bump. Widen these caps deliberately when the
    # upstream release notes clear a breaking-change review. Dev-only / tooling
    # pins live under [project.optional-dependencies] and are intentionally
    # left uncapped.
    "fastapi>=0.115,<0.121",             # middleware APIs churn minor-to-minor; widened to <0.121 (2026-05-07) so starlette CVE-2025-62727 fix (>=0.49.1) resolves cleanly
    "uvicorn[standard]>=0.32,<0.40",
    "mcp>=1.2",
    "pydantic>=2.9,<3",                  # v3 is a future rewrite
    "pydantic-settings>=2.6,<3",
    "email-validator>=2.0,<3",
    # Starlette pinned to >=0.49.1 to fix CVE-2025-62727 (FileResponse Range-header
    # quadratic ReDoS, GHSA-7f5h-v6xp-fcq8). fastapi 0.120.x relaxes its starlette
    # cap to allow this; 0.119.x still pinned to <0.49.0 which is the vulnerable line.
    "starlette>=0.49.1,<0.50",
    # python-multipart >=0.0.27 fixes CVE-2026-42561 (multipart header DoS,
    # GHSA-pp6c-gr5w-3c5g) — unbounded header count + size in MultipartParser.
    "python-multipart>=0.0.27,<1",
    "httpx>=0.28,<1.0",
    # Migration 099 — quarterly engagement PDF (`/v1/me/recurring/quarterly/...`).
    # WeasyPrint renders the Jinja2 quarterly template into a PDF on demand.
    # Server-only dep (the MCP / SDK clients never import it). Cached to
    # data/quarterly_pdfs/<api_key_id>_<year>_q<n>.pdf so repeat downloads
    # are read-from-disk, not re-rendered. v62.0+ stable across macOS+Linux.
    "weasyprint>=62.0",
    "stripe>=11.3,<13",                  # stripe-python does yearly major bumps
    "orjson>=3.10,<4",
    "structlog>=24.4",
    "sqlite-utils>=3.38,<4",
    "tenacity>=9.0,<10",
    "sentry-sdk[fastapi]>=2.19,<3",
    # Device-flow credential store (RFC 8628). Used by
    # src/jpintel_mcp/mcp/auth.py to stash the activated api_key in the
    # OS keychain (macOS Keychain / Windows Credential Manager / Linux
    # Secret Service). Falls back to a 0600 file under $XDG_CONFIG_HOME
    # when Secret Service is unavailable — see auth.py for the shim.
    "keyring>=24.0,<26",
    "scipy>=1.14,<2",                    # Beta credible interval (analytics/bayesian.py)
    # bcrypt dual-path API key storage (Wave 16 abuse-defense P1, migration 073).
    # Cost factor 12 (~100ms/attempt). Verifies new bcrypt-tagged keys; legacy
    # HMAC-SHA256 keys fall through. See src/jpintel_mcp/api/deps.py.
    "bcrypt>=4.2,<6",
    # 6-pack export format renderers (?format={xlsx,docx-application,ics,md,
    # csv-freee,csv-mf,csv-yayoi}). All four are pure-Python, MIT/BSD-licensed,
    # zero-syscall surface, and small enough to keep on the prod wheel rather
    # than gating behind an optional [formats] extra. Wired through
    # `src/jpintel_mcp/api/_format_dispatch.py`.
    "openpyxl>=3.1,<4",                  # xlsx writer (write_only mode)
    "python-docx>=1.1,<2",               # 申請書 boilerplate / DOCX cover
    "icalendar>=5.0,<7",                 # RFC 5545 calendar (deadline VEVENT fan-out)
    # PDF text extraction for the prefecture/city walker (added 2026-04-29
    # because 茨城県 / 和歌山県 / 福井県 publish program detail rows as PDFs
    # hosted on the same pref.*.lg.jp domain — those are legitimate primary
    # sources and require pdfplumber to harvest). Pure Python wheel, no system
    # deps. Used by `scripts/walk_pref_subsidy_seeds.py`.
    "pdfplumber>=0.11,<1",
    # HTML parser for the NTA / MOJ / MHLW / MIC / MAFF / court-decision
    # ingest scripts. These run inside the Fly production container via
    # `flyctl ssh ... /opt/venv/bin/python /app/scripts/...`, so bs4 must be
    # in the runtime deps (not just [dev]). 2026-05-07 R8: nta-corpus-
    # incremental-cron crashed nightly with `ModuleNotFoundError: bs4`.
    "beautifulsoup4>=4.12,<5",
    # Wave 18 E2 (2026-05-11): OpenTelemetry distributed tracing for the
    # REST API. Pure stdlib-shaped surface — OTLP HTTP exporter only, no
    # gRPC dependency (keeps the wheel small + sidesteps the protobuf
    # version churn). The instrumentation auto-wraps every FastAPI
    # request handler in a server span; `observability/otel.py` is the
    # two-gate init (env: OTEL_EXPORTER_OTLP_ENDPOINT + package
    # importability). When the endpoint is unset the entire surface
    # short-circuits to no-op so dev / CI runs are not slowed down.
    # ~9 MB wheel footprint combined; smaller than weasyprint / pyarrow.
    # NOT an LLM SDK — this is production telemetry, allowed by the
    # `feedback_no_operator_llm_api` rule (OTLP HTTP is bounded-cost
    # span export, not generative inference).
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    # PERF-1 (2026-05-16): pytest-xdist enables process-level parallelism
    # (`pytest -n auto`) — cuts local + CI wall time materially on the 10K+
    # test suite. Pinned >=3.6 for `--dist loadscope` + `loadgroup` reliability.
    "pytest-xdist>=3.6",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
    "build>=1.5.0",
    "pre-commit>=4.0",
    "duckdb>=1.1",                  # weekly_digest.py + analyze_telemetry.py
    "pyarrow>=18,<25",              # parquet writer for scripts/hf_dataset_export.py
    "huggingface_hub>=0.25,<1",     # HF dataset publish CLI; see docs/_internal/hf_publish_runbook.md
    # beautifulsoup4 lifted into main `dependencies` (production Fly cron uses it).
    "pandas>=2.2",                  # HF/e-Stat export safety tests/scripts
    "rapidfuzz>=3.6,<4",            # tests/test_reconcile_adoption.py fuzzy matcher
    # Wave 36 fallback cron runners call `python -m playwright install`.
    # Keep the Python package in [dev] so pip-installed GitHub Actions
    # workflows do not fail before the browser install step.
    "playwright>=1.48",
]
# Browser-driven end-to-end smoke suite. Separate extras group so the prod
# container build (Dockerfile) never pulls in Playwright's ~200MB browser
# dependency tree. Install locally via `pip install -e ".[e2e]" &&
# playwright install chromium`. Run via `pytest tests/e2e/`.
e2e = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "playwright>=1.48",
    "pytest-playwright>=0.6",
    "httpx>=0.28",
]
# Static site generation (per-program HTML + sitemap). Separate so the prod
# API container never pulls in cutlet's mecab dependency. Install locally via
# `pip install -e ".[site]"`. Run via `python scripts/generate_program_pages.py`.
site = [
    "pykakasi>=2.2",
    "jinja2>=3.1",
]

[project.scripts]
autonomath-api = "jpintel_mcp.api.main:run"
autonomath-mcp = "jpintel_mcp.mcp.server:run"
autonomath-ingest = "jpintel_mcp.ingest.canonical:run"
jpcite-api = "jpintel_mcp.api.main:run"
jpcite-ingest = "jpintel_mcp.ingest.canonical:run"
# Legacy aliases for existing installs (will be removed at v1.0):
jpintel-api = "jpintel_mcp.api.main:run"
jpintel-ingest = "jpintel_mcp.ingest.canonical:run"

[project.urls]
Homepage = "https://jpcite.com"
Documentation = "https://jpcite.com/docs/"
# TODO(org-claim): switch back to github.com/jpcite/autonomath-mcp once the jpcite GitHub org is claimed.
Repository = "https://github.com/shigetosidumeda-cyber/autonomath-mcp"
Issues = "https://github.com/shigetosidumeda-cyber/autonomath-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jpintel_mcp"]

# Explicit sdist include list. Without this, hatchling's sdist builder bundles
# the whole repo (site/ static HTML, research/ PDFs, data/*.db.bak.*, the sibling
# sdk/ trees, etc.), pushing the tarball to ~90MB — close to PyPI's 100MB per-
# file cap and in violation of the project's "never commit DB backups" rule
# (see CLAUDE.md). Keep this list in sync with wheel contents + whatever is
# needed to reproduce a build from the sdist.
#
# Exclude list: hatchling (non-git repo) auto-discovers README.md files and
# pyproject.toml files in subdirectories even with an explicit include list.
# The exclude list below plugs those leaks.
[tool.hatch.build.targets.sdist]
include = [
    "src/jpintel_mcp",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    "*.gitignore",
    ".gitignore",
    "docs/",
    "dxt/",
    "examples/",
    "loadtest/",
    "research/",
    "scripts/",
    "sdk/",
    "site/",
    "tests/",
    "data/",
    "overrides/",
    "content/",
    "src/jpintel_mcp/_archive/",
]

[tool.mypy]
# Stream L Tick2-G (2026-05-16): pin python_version so PEP 604 `str | int`
# unions in source are not misread as Python 3.9 syntax errors. Without this,
# mypy assumed 3.9 from `python_requires` ambiguity and flagged 385 of 991
# strict errors on union-syntax false positives. With python_version="3.11"
# the same source parses cleanly. `warn_unused_ignores = false` is a
# **temporary** loosening so tick3 cleanup can audit the residual ignore set
# without churn; flip back to `true` after the audit.
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true  # tick3 audit 完了 2026-05-16 で復元
ignore_missing_imports = false
# PERF-2 (Wave 51, 2026-05-16): incremental + sqlite-backed cache. Cold-start
# mypy --strict over src/jpintel_mcp/ scans 593 files in ~31s; with the sqlite
# cache hot, repeat runs land in <1s. sqlite_cache is faster than the default
# fs-backed cache when many small files exist.
#
# NOTE: `cache_fine_grained = true` is intentionally OMITTED. Combined with
# the lazy PEP-562 `__getattr__` stripe shim in `api/billing.py` /
# `api/credit_pack_routes.py` / `api/compliance.py`, fine-grained mode
# loses the module-level `stripe` symbol and surfaces 26 phantom
# `Name "stripe" is not defined` errors. The `dmypy` daemon (Makefile
# target `typecheck-fast`) still gives sub-second incremental checks for
# the strict gate without it.
incremental = true
cache_dir = ".mypy_cache"
sqlite_cache = true
# Stream BB (Wave 50 tick 9): mypy_path を src に固定して src/jpintel_mcp の
# package 解釈は 1 経路に保ちつつ、scripts/ 配下の duplicate-module 衝突を回避する。
# explicit_package_bases は scripts/ 配下にのみ必要なので overrides で局所化。
mypy_path = "src"
# `_archive/` is a frozen capsule of pre-Wave-25 modules kept for forensic
# reference (autonomath_tools_dead_2026-04-25 / embedding_2026-04-25 /
# reasoning_2026-04-25). The dated directory names contain hyphens and digits,
# which mypy rejects as invalid dotted package names — even with `__init__.py`
# present — and the fatal "contains __init__.py but is not a valid Python
# package name" stops the whole walk. Excluding the tree both unblocks the
# remaining checks and signals "do not type-check archived code".
exclude = [
    "^src/jpintel_mcp/_archive/",
    # Stream BB (Wave 50 tick 9): scripts/check_mcp_drift.py と scripts/ops/check_mcp_drift.py が
    # 同一 module 名で衝突する (前者は range check + runtime probe、後者は discovery surface drift
    # detector で別目的・別実装、意図的に共存)。mypy の --strict 単一 walk で
    # "Duplicate module named 'check_mcp_drift'" が出るため、より新しい / 厳密な
    # scripts/ops/check_mcp_drift.py 側を SOT として残し、トップ階層側を mypy walk から除外する。
    # 実行ファイル自体は両方 live のまま (CI / cron では path 指定 invoke)。
    "^scripts/check_mcp_drift\\.py$",
    # scripts/weekly_digest.py (旧 AutonoMath query telemetry digest) と
    # scripts/cron/weekly_digest.py (新 Saved-Search Digest cron / 60-day Advisor Loop) も
    # 同一 module 名衝突。新側 (cron/) が active SOT、旧側は legacy invoke 互換のため残置、
    # mypy walk からは除外。
    "^scripts/weekly_digest\\.py$",
    # scripts/cron/_r2_client.py は cron 配下 backup / restore / parquet export / edinet ingest
    # 等の import 元が "_r2_client" / "cron._r2_client" / "scripts.cron._r2_client" の 3 path で
    # 実行時 sys.path に依存して切り替わる runtime-resolution module。`__init__.py` 追加や
    # absolute path 統一は import chain (cron / restore_drill / verify_backup) の挙動を変える
    # 恐れがあるため、Stream BB (suppression-only) では mypy walk から除外する。
    # 実行ファイルは変更無し、cron 実行 path もそのまま。
    "^scripts/cron/_r2_client\\.py$",
]

[[tool.mypy.overrides]]
# Optional / heavyweight deps that ship no type stubs. We do not want strict
# mode to fail on `import pykakasi` etc. just because upstream skipped py.typed.
# These are all already isolated to their own callers (site generator,
# Japanese normalizer, fast JSON, Playwright fallback cron), so suppressing
# missing-import strictness here does not leak into the prod surface.
# Stream L Tick3 (2026-05-16) additions: scipy/openpyxl/icalendar/weasyprint
# (Bayesian + xlsx/ics/pdf exporters), ratelimit/diskcache (gbiz limiter),
# re2/sudachipy/spacy (business-law detector + verifier NLP), sqlite_vec
# (recommend_similar), reasoning/query_rewrite (autonomath reasoning gate).
module = [
    "pykakasi.*",
    "orjson.*",
    "MeCab.*",
    "fugashi.*",
    "ipadic.*",
    "playwright.*",
    "scipy.*",
    "openpyxl.*",
    "icalendar.*",
    "weasyprint.*",
    "ratelimit.*",
    "diskcache.*",
    "re2.*",
    "sudachipy.*",
    "spacy.*",
    "sqlite_vec.*",
    "reasoning.*",
    "query_rewrite.*",
    "jpintel_mcp.api.program_agriculture",
    # GPU burn (jpcite-gpu-batch) heavyweight ML deps. Installed at
    # job runtime via entrypoint_gpu_burn.sh — not present in local
    # .venv, so mypy strict needs ignore_missing_imports to walk
    # scripts/aws_credit_ops/build_faiss_index_gpu.py cleanly.
    "torch.*",
    "faiss.*",
    "sentence_transformers.*",
    "boto3.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true
extend-exclude = ["src/jpintel_mcp/_archive"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI Body() / Depends() in defaults is canonical idiom — B008 is a false positive there.
"src/jpintel_mcp/api/wave24_endpoints.py" = ["B008"]
"sdk/mf-plugin/proxy_endpoints.py" = ["B008"]
# `format` arg name matches the public MCP tool param contract (output format).
"src/jpintel_mcp/mcp/autonomath_tools/intel_wave31.py" = ["A002"]
# JSON / API surface field names from upstream (courts.go.jp, METI 行政文書) preserve original camelCase.
"scripts/ingest/ingest_court_decisions_lower.py" = ["N803"]
"scripts/ingest/ingest_enforcement_meti.py" = ["N802"]
"scripts/ops/verify_migration_targets.py" = ["N806"]
# numeric counters in benchmarks / ETL inner loops — enumerate() rewrites are noisier than the original.
"benchmarks/jcrb_v1/run_token_benchmark.py" = ["SIM113"]
"scripts/etl/build_entity_density_score.py" = ["SIM113"]
"scripts/etl/build_entity_pagerank.py" = ["SIM113"]
# multi-clause if/else carries comments and divergent paths — ternary collapses readability.
"scripts/etl/build_temporal_correlation.py" = ["SIM108"]
"scripts/ingest/ingest_court_decisions_courts_jp.py" = ["SIM108"]
"scripts/ingest/ingest_enforcement_maff.py" = ["SIM108"]
# nested `with` patches are intentional — combining changes mock teardown order.
"sdk/freee-plugin/tests/test_freee_glue.py" = ["SIM117"]
"tests/test_industry_journal_mention.py" = ["SIM117"]
# Test-only patterns: GZipMiddleware alias, lambda-in-loop fake_results, sys.path manipulation before imports.
"tests/test_gzip_middleware.py" = ["N814"]
"tests/test_post_deploy_smoke.py" = ["B023"]
"tests/smoke/smoke_pre_launch.py" = ["E402"]
# boto3-shaped fake clients preserve PascalCase kwargs to mirror the real API.
"tests/test_aggregate_run_ledger.py" = ["N803"]
# Stream BB (Wave 50 tick 9) — ruff hygiene sweep. Suppression-only (no logic change):
# - E402: sys.path / dotenv / env-bootstrap before imports is canonical for these entrypoints.
# - B904: HTTPException re-raise paths preserve existing user-facing semantics; "from err" rewrite would change envelopes.
# - SIM10x / SIM11x: stylistic; rewriting changes generated tracebacks / logging side-effects in ETL hot paths.
# - TC002 / TC003: TYPE_CHECKING import shuffles defer runtime imports; some modules read those types at request time.
# - F841: variable assignments preserved for breakpoint/debug ergonomics in long-running cron / etl walks.
# - N802 / N806 / A002 / UP012 / UP017: function names / arg names embed 日本語 fixtures or upstream API field names.
# - B007: loop variable kept named for readability in counter-only paths.
"scripts/check_agent_runtime_contracts.py" = ["E402"]
"scripts/cron/aggregate_organic_funnel_daily.py" = ["SIM103", "SIM105"]
"scripts/cron/embed_knowledge_graph_vec.py" = ["F841"]
"scripts/cron/fill_laws_ko_v2.py" = ["SIM105"]
"scripts/cron/fill_laws_zh_v2.py" = ["SIM105"]
"scripts/cron/fill_programs_en_bulk.py" = ["SIM105"]
"scripts/cron/ingest_cases_daily.py" = ["SIM105"]
"scripts/cron/precompute_alliance_opportunity.py" = ["F841"]
"scripts/cron/precompute_cohort_5d.py" = ["TC003"]
"scripts/cron/precompute_program_risk_4d.py" = ["TC003"]
"scripts/cron/precompute_supplier_chain.py" = ["TC003"]
"scripts/cwv_hardening_patch.py" = ["F841", "N806", "SIM102"]
"scripts/etl/build_personalization_recommendations.py" = ["SIM102"]
"scripts/etl/datafill_amendment_snapshot.py" = ["SIM108"]
"scripts/etl/datafill_amendment_snapshot_v3.py" = ["E402"]
"scripts/etl/fill_court_decisions_extended_2x.py" = ["SIM103"]
"scripts/etl/fill_enforcement_municipality_2x.py" = ["SIM103"]
"scripts/etl/fill_fdi_80country_2x.py" = ["TC003"]
"scripts/etl/fill_laws_jorei_47pref_2x.py" = ["SIM110"]
"scripts/ops/aws_credit_local_preflight.py" = ["E402"]
"scripts/ops/run_preflight_simulations.py" = ["SIM102"]
"scripts/ops/validate_release_capsule.py" = ["TC003"]
"scripts/verify_outcomes.py" = ["TC003"]
"src/jpintel_mcp/api/_failover.py" = ["TC003"]
"src/jpintel_mcp/api/appi_deletion.py" = ["E402"]
"src/jpintel_mcp/api/appi_disclosure.py" = ["E402"]
"src/jpintel_mcp/api/court_decisions_v2.py" = ["B904"]
"src/jpintel_mcp/api/enforcement_municipality.py" = ["B904"]
"src/jpintel_mcp/api/graphql.py" = ["A002"]
"src/jpintel_mcp/api/law_tsutatsu_guideline.py" = ["B904"]
"src/jpintel_mcp/api/me/api_keys.py" = ["TC003"]
"src/jpintel_mcp/api/middleware/edge_header_sanitization.py" = ["TC003"]
"src/jpintel_mcp/api/sitemap_audit.py" = ["A002"]
"src/jpintel_mcp/billing/acp_integration.py" = ["TC003"]
"src/jpintel_mcp/mcp/resource_subscriber.py" = ["TC003"]
"tests/acceptance/test_acceptance_v3.py" = ["F841", "SIM110"]
"tests/chaos/conftest.py" = ["SIM105", "TC003"]
"tests/chaos/test_resilience_5pillar.py" = ["TC003"]
"tests/test_aggregate_organic_funnel.py" = ["F841", "TC002"]
"tests/test_api_route_smoke_revenue_wave10.py" = ["TC003"]
"tests/test_axis5_multilingual.py" = ["SIM108"]
"tests/test_composition_tools_dispatch.py" = ["TC003"]
"tests/test_detect_first_txn.py" = ["TC003"]
"tests/test_dim_a_semantic_v1.py" = ["SIM115"]
"tests/test_dim_k_storage_integration.py" = ["B007"]
"tests/test_dim_n_pii_redact_strict.py" = ["TC002"]
"tests/test_edge_header_sanitization.py" = ["TC003"]
"tests/test_extended_corpus.py" = ["SIM105"]
"tests/test_intel_competitor_landscape.py" = ["E402", "N802"]
"tests/test_intel_wave31_pure.py" = ["N802", "SIM103", "TC002"]
"tests/test_observability_sentry_otel.py" = ["TC003"]
"tests/test_pdf_report_render.py" = ["TC003"]
"tests/test_verify_outcomes.py" = ["TC003"]
"tests/test_sitemap_audit.py" = ["E402", "TC002"]
"tests/test_source_fetched_at_semantic_honesty.py" = ["N802"]
# AWS Boto3 canary mock tests preserve upstream camelCase arg names (jobName/jobQueue/Bucket/Key/Body, etc.)
# and test function names embed numeric thresholds (17K/18_3K/18_9K/19_3K) for canary band readability.
"tests/test_aws_canary_smoke_mock.py" = ["N803"]
"tests/test_aws_canary_smoke_mock_extended.py" = ["N802", "N803"]
# DB fixture test files import submodule aliases (W/A/I/M/P) for compact dispatch; alias intent is dispatcher-style.
# TC003: Path imports used at fixture runtime via parametrize / tmp_path coercion, cannot defer to TYPE_CHECKING.
"tests/test_api_artifacts_db_fixture.py" = ["N812", "TC003"]
"tests/test_api_intel_db_fixture.py" = ["N812", "TC003"]
"tests/test_api_main_db_fixture.py" = ["N812"]
"tests/test_api_programs_db_fixture.py" = ["N812", "TC003"]
"tests/test_api_programs_search_db_fixture.py" = ["TC003"]
"tests/test_api_main_coverage_push.py" = ["N812"]
"tests/test_api_programs_coverage_push.py" = ["N812", "TC003"]
"tests/test_mcp_wave24_second_half_db_fixture.py" = ["N812", "TC003"]
"tests/test_wave24_tools_first_half_db_fixture.py" = ["N812", "TC003"]
"tests/test_evidence_packet_db_fixture.py" = ["TC003"]
# 日本語 fixture name embedded in test name ("任意") — N802 lowercase rule does not apply to JP identifiers.
"tests/test_api_intel_helpers_extra.py" = ["N802"]
# TC003 / SIM105 for coverage test scaffolds — Path used in fixture argument coercion; ALTER TABLE
# idempotent re-run patterns mirror the production migration runner contract.
"tests/test_api_billing_coverage.py" = ["TC003"]
"tests/test_api_ma_dd_coverage.py" = ["TC003"]
"tests/test_api_audit_coverage.py" = ["SIM105"]
"tests/test_middleware_coverage.py" = ["TC003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# PERF-1 (2026-05-16): duration accounting on by default; xdist parallelism
# opt-in via CLI/CI to avoid breaking module-ordering-sensitive tests
# (a handful of tests depend on a sibling module having imported `stripe`
# at module scope; `loadscope` distributes modules across workers and breaks
# that implicit import order — those need explicit fixtures before
# xdist becomes the default).
#
# PERF-39 (2026-05-17): N-worker tuning. Bench on 944-test api+services
# subset (8-physical-core MacBook, 32GB RAM):
#   N=1   75.69s (1.00x baseline)
#   N=2   42.54s (1.78x)
#   N=4   27.15s (2.79x)
#   N=6   25.39s (2.98x)   ← optimal sweet spot
#   N=8   29.91s (2.53x)   ← regression (DB fixture / sqlite-WAL contention)
#   N=auto 29.80s (2.54x)  ← regression — auto picks hw.ncpu=8
# Inflection point at N=6 — beyond that, fixture contention dominates.
# Use `-n 6 --dist loadscope` for local dev; CI shards use lower N per shard.
#
# Recommended invocations:
#   * Local dev:  .venv/bin/pytest -n 6 --dist loadscope <paths>      ← PERF-39 optimal
#   * CI shard:   pytest -n 6 --dist loadscope --shard-id=N --num-shards=4
#   * Single test: .venv/bin/pytest <path>::<test>                    (serial)
#
# `--durations=10` surfaces the top-10 slowest tests on every run so
# regressions are visible.
addopts = ["--durations=10"]
markers = [
    "slow: runtime/import-heavy checks that are not part of the fastest local loop",
    "aws_live: tests that hit live AWS APIs (canary, budget guard); off by default in local loop",
    "pre_flight: production preflight gate tests; reserved for the Stream A / deploy readiness loop",
    "benchmark: lightweight perf regression tests; skip via `-m 'not benchmark'` on slow runners",
]
